# NuLat

./: .gitignore  CMakeLists.txt  Makefile  NuLat.cc  README.md  readme.md  rename.sh  setup_nulat.sh
config/: Config.hh.in  nulat.sh.in
data/: NULAT5x5x5_instrumented_Li6.geo  NULAT5x5x5_instrumented_reflector.geo  create_NuLat_geo.py
include/: NuLatAction.hh  NuLatDetectorConstruction.hh  NuLatEvent.cc  NuLatEvent.hh  NuLatGenerator.hh  NuLatPMTsensitiveDetector.hh  NuLatVoxelSensitiveDetector.hh
macros/: createNuLatFiducialSet.py  directional_test_1.mac  fiducial_set_init.mac  init.mac  nulat_directional_ref_gen.mac  nulat_validation.mac  readme.md  sodium_22_decay_test_1.mac  test.mac  vis.mac  vis_nulat.mac
macros/blind/: generate_blind_study.py  secret_truth_vault.csv
macros/blind/blind_macros/: blind_set_001.mac  blind_set_002.mac  blind_set_003.mac  blind_set_004.mac  blind_set_005.mac  blind_set_006.mac  blind_set_007.mac  blind_set_008.mac  blind_set_009.mac  blind_set_010.mac  blind_set_011.mac  blind_set_012.mac  blind_set_013.mac  blind_set_014.mac  blind_set_015.mac  blind_set_016.mac  blind_set_017.mac  blind_set_018.mac  blind_set_019.mac  blind_set_020.mac  blind_set_021.mac  blind_set_022.mac  blind_set_023.mac  blind_set_024.mac  blind_set_025.mac  blind_set_026.mac  blind_set_027.mac  blind_set_028.mac  blind_set_029.mac  blind_set_030.mac
macros/fiducial/: angle_0.mac  angle_1.mac  angle_10.mac  angle_100.mac  angle_101.mac  angle_102.mac  angle_103.mac  angle_104.mac  angle_105.mac  angle_106.mac  angle_107.mac  angle_108.mac  angle_109.mac  angle_11.mac  angle_110.mac  angle_111.mac  angle_112.mac  angle_113.mac  angle_114.mac  angle_115.mac  angle_116.mac  angle_117.mac  angle_118.mac  angle_119.mac  angle_12.mac  angle_120.mac  angle_121.mac  angle_122.mac  angle_123.mac  angle_124.mac  angle_125.mac  angle_126.mac  angle_127.mac  angle_128.mac  angle_129.mac  angle_13.mac  angle_130.mac  angle_131.mac  angle_132.mac  angle_133.mac  (+321 more)
models/: readme.md
output/analysis/: blind_analysis_fits.csv  nulatDirectionalAnalyzer.py  run_unblinding.py
output/analysis/nulat_env/: pyvenv.cfg
output/directionality/blind_study/: blind_study.sh
output/fiducial/: createNuLatFiducialSet.py  fiducial_dir_contents.txt  generate_reference_set.sh  nulat_fiducial_directionality_set.json  nulat_fiducial_directionality_set_edep_test0.json  readFiducial.C
output/gamma_test/: gamma_test_analyzer.py
output/validation/: readValidation.C  validate_nulat_physics.py
ratdb/: MATERIALS_NULAT.ratdb  NULAT5x5x5_instrumented_undoped.geo  PMT_NULAT.ratdb  SEGMENTEDDETECTOR.ratdb  create_NuLat_geo.py  materials_snippet.ratdb  readme.md  scint_data_formatter.py
src/: CMakeLists.txt  NuLatAction.cc  NuLatDetectorConstruction.cc  NuLatEvent.cc  NuLatGenerator.cc  NuLatPMTsensitiveDetector.cc  NuLatPhysics.cc  NuLatRun.cc  NuLatVoxelSensitiveDetector.cc  Nulat.cc  SegmentedDetectorFactory.cc  nulat.cpp
src/include/: Nulat.hh  SegmentedDetectorFactory.hh  readme.md
utilities/: readme.md
